--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -79,7 +79,7 @@
       <img src="https://i.imgur.com/Lt0mLyj.png" alt="">
     </div>
   </div>
-  <div class="categorias mt-5 borda">
+  <div class="categorias mt-5">
     <!-- <a class="link-categoria " href="">Explore novos caminhos</a> -->
     <h4 class="texto-categoria">Explore novos caminhos</h4>
     <div class="row m-0 p-0 categoria-itens ">
