--- a/src/app/edit/perfil-edit/perfil-edit.component.css
+++ b/src/app/edit/perfil-edit/perfil-edit.component.css
@@ -1,7 +1,23 @@
 .caixa-perfil {
   max-width: 100vw;
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(180deg, rgba(214, 214, 214, 0.548) 100%, white);
+  animation: initial-animatio 2s ease-in-out;
+}
+
+a.button-left{
+  z-index: 1000;
+  color: rgba(228, 228, 228, 0.589);
+  position: absolute;
+  top: 7%;
+  left: 5%;
+  font-size: 24px;
+  padding: 8px;
+}
+
+.box {
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.075);
+  animation: card-animation 2s ease-in-out;
 }
 
 .row {
@@ -9,14 +25,104 @@
   padding: 0 !important;
 }
 
-canvas{
-    width: 250px;
-    height: 250px;
+.conteudo-profile {
+  width: 100%;
+  height: 100%;
+}
+
+.descricao-usuario h4 {
+  color: #71EED0;
+
+}
+
+.descricao-usuario p {
+  color: rgb(126, 126, 126);
+  font-size: 1.2em;
+}
+
+.caixa-descricao {
+  background: white;
+  margin: 25px;
+  padding: 15px;
+  border-radius: 32px;
+  padding-bottom: 25px;
+}
+
+.caixa-descricao i{
+  color: #71EED0;
+  font-size: 24px;
+}
+
+.link-item{
+  padding-top: 10px !important;
+}
+
+.numeros {
+  background: white;
+  border-radius: 32px;
+  margin: 25px 40px 25px 10px;
+}
+
+img.nivel {
+  width: 150px;
+  height: 150px;
+}
+
+
+.numeros h5 {
+  color: #71EED0;
+  font-size: 1.2em;
+}
+
+.numeros h6 {
+  color: #71EED0;
+  font-size: 0.8em;
+}
+
+img.star {
+  width: 100%;
+}
+
+h2.numero-1 {
+  color: #A6FAE6;
+}
+
+h2.numero-2 {
+  color: #F59A9A;
+}
+
+h2.numero-3 {
+  color: #BA92FF;
+}
+
+
+img.img-depoimento{
+  width: 250px;
+}
+
+.card-depoimento{
+  margin: 20px !important;
+}
+
+.caixa-depoimento{
+  margin-left: 5% !important;
+}
+
+
+
+
+
+
+
+
+canvas {
+  width: 250px;
+  height: 250px;
 }
 
 .capa-perfil {
   background: url(https://i.imgur.com/2Phu8yf.jpg);
-  height: 220px;
+  height: 160px;
   background-size: cover;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
@@ -35,11 +141,35 @@ canvas{
   transform: translateX(-50%);
 }
 
-.dados-usuario{
-    padding-top: 50px;
-    width: 100%;
+.dados-usuario {
+  padding-top: 20px;
+  width: 100%;
 }
 
-.caixa-nome{
-    margin-top: 80px;
+.caixa-nome {
+  margin-top: 70px;
+}
+
+.caixa-nome h4 {
+  color: rgba(0, 0, 0, 0.568);
+  font-size: 1.8em;
+}
+
+@keyframes card-animation {
+  from{
+    transform: translateY(40%);
+    opacity: 0;
+  }
+  to{
+    transform: translateY(0);
+  }
+}
+
+@keyframes initial-animatio {
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
 }
