--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -98,7 +98,7 @@
     <!-- ----------------------------------------------------------------------- -->
 
     <div class="col-md-6 post-center position-relative">
-     
+
       <div class="row">
         <div class="col-md-12 perfil-post ">
           <img src="{{foto}}" alt="">
@@ -143,8 +143,8 @@
                       <small class="m-0">{{item.usuario.cargo}}</small>
                     </div>
                     <div class="row">
-                      <small>{{item.dataPublicacao | date: 'MMMM  d/y'}} ás
-                        {{item.dataPublicacao | date: 'HH:MM'}}</small>
+                      <small>{{item.dataPublicacao | date: 'MMMM  dd/yy'}} ás
+                        {{item.dataPublicacao | date: 'hh:mm'}}</small>
                     </div>
                   </div>
                   <div class="col-md-1  post-profile-config d-flex flex-column align-items-end ml-3">
