--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -178,45 +178,94 @@
   </section>
   <section class="desenvolvedores" id="desenvolvedores">
     <div class="row m-0 p-0  d-flex justify-content-center">
-      <div class="col-md-6  d-flex justify-content-center">
+      <div class="col-md-6  mb-2 d-flex justify-content-center">
         <h4>time de desenvolvedores</h4>
       </div>
     </div>
     <div class="row m-0 p-0 ">
-      <div class="col-md-3  d-flex align-items-center flex-column">
-        <!-- <img src="https://i.imgur.com/g6JNNuB.png" alt=""> -->
+      <div class="col-md-3  d-flex align-items-center flex-column card-desenvolvedor">
+        <img src="https://i.imgur.com/3FILSmt.png" alt="">
         <h3>Fernando Merim</h3>
         <small>Dev. Full Stack Java Jr.</small>
         <p>Formado em Ciências Contábeis e atualmente cursando Sistemas de Informação. Ser referência, fazer a diferença
           e simplificar a vida das pessoas através da tecnologia são os meus objetivos. </p>
-
+        <div class="row  links-pessoais">
+          <div class="col-md-12 d-flex ">
+            <div class="col-md-4 ">
+              <a href=""><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <div class="col-md-4 ">
+              <a href=""><i class="fab fa-github"></i></a>
+            </div>
+            <div class="col-md-4 ">
+              <a href=""><i class="far fa-envelope"></i></a>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="col-md-3  d-flex align-items-center flex-column">
-        <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
-        <h3>Gabriel Cassimiro</h3>
+      <div class="col-md-3  d-flex align-items-center flex-column  card-desenvolvedor">
+        <img src="https://i.imgur.com/T9Lj99z.png" alt="">
+        <h3 class="titulo-alternativo">Gabriel Cassimiro</h3>
         <small>Dev. Full Stack Java Jr.</small>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-          industry's standard dummy text ever since the 1500s, when an unknown </p>
-
+        <p>Meu nome é Gabriel Cassimiro, tenho 22 anos e estou partindo para uma transição de carreira junto ao bootcamp
+          da Generation Brasil, um apaixonado por tecnologia e principalmente, motivado!</p>
+        <div class="row  links-pessoais">
+          <div class="col-md-12 d-flex ">
+            <div class="col-md-4 ">
+              <a href=""><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <div class="col-md-4 ">
+              <a href=""><i class="fab fa-github"></i></a>
+            </div>
+            <div class="col-md-4 ">
+              <a href=""><i class="far fa-envelope"></i></a>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="col-md-3  d-flex align-items-center flex-column">
+      <div class="col-md-3  d-flex align-items-center flex-column  card-desenvolvedor">
         <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
         <h3>Lucas Cruz</h3>
         <small>Dev. Full Stack Java Jr.</small>
         <p>Estudante de Análise e desenvolvimento de sistemas apaixonado por processos criativos, movido por idéias
           inovadoras e tudo que a tecnologia pode viabilizar </p>
-
+        <div class="row  links-pessoais">
+          <div class="col-md-12 d-flex ">
+            <div class="col-md-4 ">
+              <a href="https://www.linkedin.com/in/lucasv-cruz/"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <div class="col-md-4 ">
+              <a href="https://github.com/LucasViniciusC"><i class="fab fa-github"></i></a>
+            </div>
+            <div class="col-md-4 ">
+              <a href="mailto:lucasvcruz.dev@gmail.com"><i class="far fa-envelope"></i></a>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="col-md-3  d-flex align-items-center flex-column">
-        <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
-        <h3>Luis Henrique de Sousa </h3>
+      <div class="col-md-3  d-flex align-items-center flex-column  card-desenvolvedor">
+        <img src="https://i.imgur.com/lr4fCNX.png" alt="">
+        <h3>Luis Henrique</h3>
         <small>Dev. Full Stack Java Jr.</small>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-          industry's standard dummy text ever since the 1500s, when an unknown </p>
-
+        <p>Estudante de Análise e desenvolvimento de sistema,
+          e apaixonado com funcionalidade, em busca de desafios
+          dentro da tecnologia saber como funciona cada coisa.</p>
+        <div class="row  links-pessoais">
+          <div class="col-md-12 d-flex ">
+            <div class="col-md-4 ">
+              <a href=""><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <div class="col-md-4 ">
+              <a href=""><i class="fab fa-github"></i></a>
+            </div>
+            <div class="col-md-4 ">
+              <a href=""><i class="far fa-envelope"></i></a>
+            </div>
+          </div>
+        </div>
       </div>
 
 
