--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -143,8 +143,8 @@
                       <small class="m-0">{{item.usuario.cargo}}</small>
                     </div>
                     <div class="row">
-                      <small>{{item.dataPublicacao | date: 'MMMM  dd/yy'}} ás
-                        {{item.dataPublicacao | date: 'hh:mm'}}</small>
+                      <small>{{item.dataPublicacao | date: 'MMMM  dd/yyyy'}} ás
+                        {{item.dataPublicacao | date: 'HH:mm'}}</small>
                     </div>
                   </div>
                   <div class="col-md-1  post-profile-config d-flex flex-column align-items-end ml-3">
