--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -256,10 +256,10 @@
         <div class="row  links-pessoais">
           <div class="col-md-12 d-flex ">
             <div class="col-md-4 ">
-              <a href=""><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.linkedin.com/in/luis-henrique-4ba20b1a9/"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <div class="col-md-4 ">
-              <a href=""><i class="fab fa-github"></i></a>
+              <a href="https://github.com/RiqueLimma"><i class="fab fa-github"></i></a>
             </div>
             <div class="col-md-4 ">
               <a href=""><i class="far fa-envelope"></i></a>
@@ -299,7 +299,7 @@
 
 
 
-<!-- 
+<!--
 <script type="text/javascript" src="../../../node_modules/rellax/rellax.js"></script>
 <script>
     var rellax = new Rellax('.rellax', {
