--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -192,10 +192,10 @@
         <div class="row  links-pessoais">
           <div class="col-md-12 d-flex ">
             <div class="col-md-4 ">
-              <a href=""><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.linkedin.com/in/fernando-merim/"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <div class="col-md-4 ">
-              <a href=""><i class="fab fa-github"></i></a>
+              <a href="https://github.com/fernandomerim"><i class="fab fa-github"></i></a>
             </div>
             <div class="col-md-4 ">
               <a href=""><i class="far fa-envelope"></i></a>
@@ -213,10 +213,10 @@
         <div class="row  links-pessoais">
           <div class="col-md-12 d-flex ">
             <div class="col-md-4 ">
-              <a href=""><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.linkedin.com/in/gabriel-cassimiro-606067145/"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <div class="col-md-4 ">
-              <a href=""><i class="fab fa-github"></i></a>
+              <a href="https://github.com/Cassimiroprog"><i class="fab fa-github"></i></a>
             </div>
             <div class="col-md-4 ">
               <a href=""><i class="far fa-envelope"></i></a>
